visits/bridge/base/0-visits-namespace.yaml
#! 0-visits-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: visits
    labels:
        com.docker.compose.project: visits
