visits/bridge/base/redis-server-deployment.yaml
#! redis-server-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-server
    namespace: visits
    labels:
        com.docker.compose.project: visits
        com.docker.compose.service: redis-server
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: visits
            com.docker.compose.service: redis-server
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: visits
                com.docker.compose.service: redis-server
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: redis-server
                  image: redis
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: redis-serv-6379
                      containerPort: 6379
