visits/bridge/base/node-app-expose.yaml
#! node-app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: node-app
    namespace: visits
    labels:
        com.docker.compose.project: visits
        com.docker.compose.service: node-app
spec:
    selector:
        com.docker.compose.project: visits
        com.docker.compose.service: node-app
    ports:
        - name: node-app-8081
          port: 8081
          targetPort: node-app-8081
